Popup removed during member registration

--- a/Views/Member/MemberRegistration.cshtml
+++ b/Views/Member/MemberRegistration.cshtml
@@ -272,7 +272,7 @@
 @Html.Hidden("hdnFamilyIndividual")
 <script type="text/javascript">
     $(document).ready(function () {
-        window.open("https://services.myphysicianplan.com/10062020021524PPCPPrivacyPolicyconverted");
+        //window.open("https://services.myphysicianplan.com/10062020021524PPCPPrivacyPolicyconverted");
         var countryID = 1;
         $('#CountryID').val("1");
         $("#CountryName").val("United States of America");
